--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="style/style.css" />
     <!-- x -->
     <!--! JS !-->
-    <script src="js/main.js" defer></script>
+    <script src="./js/main.js" defer></script>
     <!-- x *-->
     <!--! Fonts !-->
     <style>
